# gpvl-v2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/arxiv/: 00README.txt  abstract.tex  appendix.tex  discussion.tex  equations.tex  introduction.tex  main.tex  methods.tex  preamble.tex  references.tex  results.tex  thresholds.tex  validation.tex
scripts/: publish_github.ps1
simulations/: cooperation_collapse.py  fertility_forecast.py  generate_panel_reference.py  regime_transition.py
src/volition/: __init__.py  cli.py  constants.py  equations.py  goalden.py  hazard.py  paths.py  regime.py  state.py  vpde.py
src/volition/data/: __init__.py  dim4.py  firms.py  panel.py
src/volition/data/files/: __init__.py  dim4_panel_1950_2023.csv
src/volition/equations/: __init__.py  axioms.py  dynamics.py  fertility.py  invariants.py  phi.py  symbols.py
src/volition/export/: __init__.py  latex.py  manuscript.py
src/volition/geometry/: __init__.py  calibration.py  g2.py  octonion.py
src/volition/mcmc/: __init__.py  models.py  sampler.py  validation.py
src/volition/vpde/: __init__.py  calibration.py  controls.py  solver.py
tests/: test_axioms.py  test_cli.py  test_dim4_data.py  test_equation_invariants.py  test_equations.py  test_firm_data.py  test_geometry.py  test_goalden.py  test_latex_export.py  test_manuscript_export.py  test_mcmc.py  test_panel_data.py  test_paths.py  test_phi.py  test_regime.py  test_regime_transitions.py  test_state.py  test_vpde.py  test_vpde_calibration.py
